# endgame

./: .gitignore  Cargo.toml  config.py  download.py  flake.nix  main.py  utils.py
src/: config.rs  download.rs  main.rs  utils.rs
