[package]
name = "endgame"
version = "0.1.0"
edition = "2024"

[dependencies]
grammers-client = { git = "https://codeberg.org/Lonami/grammers.git" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers.git", features = ["sqlite-storage"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = { version = "5", default-features = false, features = ["colors"] }
rand = "0.8"
regex = "1"
mime = "0.3"
mime_guess = "2"
anyhow = "1"
